--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -12,7 +12,22 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.navFont {
+  font-size: 14px;
+  font-family: "Favorit SSENSE Inter";
+  letter-spacing: 1px;
+  font-weight: 0;
+}
+.navFont:hover {
+  background-image: -webkit-linear-gradient(
+    top,
+    rgba(0, 0, 0, 0) 50%,
+    rgba(0, 0, 0, 0.75) 50%
+  );
+  background-repeat: repeat-x;
+  background-size: 2px 2px;
+  background-position: 0 1.1em;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
