--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -15,10 +15,23 @@
 .navFont {
   font-size: 14px;
   font-family: "Favorit SSENSE Inter";
-  letter-spacing: 1px;
+  /* letter-spacing: 1px; */
   font-weight: 0;
+  text-transform: uppercase;
 }
-.navFont:hover {
+.footerLinks {
+  font-size: 11px;
+  margin: 0 10px;
+  text-transform: uppercase;
+}
+.siteFooter {
+  font-size: 10px;
+  margin: 0 10px;
+  text-transform: uppercase;
+}
+.navFont:hover,
+.footerLinks:hover,
+.siteFooter:hover {
   background-image: -webkit-linear-gradient(
     top,
     rgba(0, 0, 0, 0) 50%,
